// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reserve > renderReserve > should properly render altered reserve 1`] = `
"#### WBTC ([0x2f2a2543B76A4166549F7aaB2e75Bef0aefC5B0f](https://etherscan.io/address/0x2f2a2543B76A4166549F7aaB2e75Bef0aefC5B0f))

| description | value before | value after |
| --- | --- | --- |
| borrowCap | 1,115 WBTC | 100 WBTC |
"
`;

exports[`reserve > renderReserve > should properly render new reserve 1`] = `
"#### WBTC ([0x2f2a2543B76A4166549F7aaB2e75Bef0aefC5B0f](https://etherscan.io/address/0x2f2a2543B76A4166549F7aaB2e75Bef0aefC5B0f))

| description | value |
| --- | --- |
| decimals | 8 |
| isActive | true |
| isFrozen | false |
| supplyCap | 2,100 WBTC |
| borrowCap | 1,115 WBTC |
| debtCeiling | 1,000 $ |
| isSiloed | false |
| isFlashloanable | false |
| eModeCategory | 0 |
| oracle | [0x6ce185860a4963106506C203335A2910413708e9](https://etherscan.io/address/0x6ce185860a4963106506C203335A2910413708e9) |
| oracleDecimals | 8 |
| oracleDescription | BTC / USD |
| oracleName | BTC / USD |
| oracleLatestAnswer | 22519.04551524 |
| usageAsCollateralEnabled | true |
| ltv | 70 % |
| liquidationThreshold | 75.55 % |
| liquidationBonus | 10 % |
| liquidationProtocolFee | 10 % |
| reserveFactor | 20 % |
| aToken | [0x078f358208685046a11C85e8ad32895DED33A249](https://etherscan.io/address/0x078f358208685046a11C85e8ad32895DED33A249) |
| aTokenImpl | [0xa5ba6E5EC19a1Bf23C857991c857dB62b2Aa187B](https://etherscan.io/address/0xa5ba6E5EC19a1Bf23C857991c857dB62b2Aa187B) |
| variableDebtToken | [0x92b42c66840C7AD907b4BF74879FF3eF7c529473](https://etherscan.io/address/0x92b42c66840C7AD907b4BF74879FF3eF7c529473) |
| variableDebtTokenImpl | [0x81387c40EB75acB02757C1Ae55D5936E78c9dEd3](https://etherscan.io/address/0x81387c40EB75acB02757C1Ae55D5936E78c9dEd3) |
| stableDebtToken | [0x633b207Dd676331c413D4C013a6294B0FE47cD0e](https://etherscan.io/address/0x633b207Dd676331c413D4C013a6294B0FE47cD0e) |
| stableDebtTokenImpl | [0x52A1CeB68Ee6b7B5D13E0376A1E0E4423A8cE26e](https://etherscan.io/address/0x52A1CeB68Ee6b7B5D13E0376A1E0E4423A8cE26e) |
| borrowingEnabled | true |
| stableBorrowRateEnabled | false |
| isBorrowableInIsolation | false |
| interestRateStrategy | [0x9b34E3e183c9b0d1a08fF57a8fb59c821616295f](https://etherscan.io/address/0x9b34E3e183c9b0d1a08fF57a8fb59c821616295f) |
"
`;

exports[`reserve > renderReserve > should properly render new reserve with local chain id 1`] = `
"#### WBTC (0x2f2a2543B76A4166549F7aaB2e75Bef0aefC5B0f)

| description | value |
| --- | --- |
| decimals | 8 |
| isActive | true |
| isFrozen | false |
| supplyCap | 2,100 WBTC |
| borrowCap | 1,115 WBTC |
| debtCeiling | 1,000 $ |
| isSiloed | false |
| isFlashloanable | false |
| eModeCategory | 0 |
| oracle | 0x6ce185860a4963106506C203335A2910413708e9 |
| oracleDecimals | 8 |
| oracleDescription | BTC / USD |
| oracleName | BTC / USD |
| oracleLatestAnswer | 22519.04551524 |
| usageAsCollateralEnabled | true |
| ltv | 70 % |
| liquidationThreshold | 75.55 % |
| liquidationBonus | 10 % |
| liquidationProtocolFee | 10 % |
| reserveFactor | 20 % |
| aToken | 0x078f358208685046a11C85e8ad32895DED33A249 |
| aTokenImpl | 0xa5ba6E5EC19a1Bf23C857991c857dB62b2Aa187B |
| variableDebtToken | 0x92b42c66840C7AD907b4BF74879FF3eF7c529473 |
| variableDebtTokenImpl | 0x81387c40EB75acB02757C1Ae55D5936E78c9dEd3 |
| stableDebtToken | 0x633b207Dd676331c413D4C013a6294B0FE47cD0e |
| stableDebtTokenImpl | 0x52A1CeB68Ee6b7B5D13E0376A1E0E4423A8cE26e |
| borrowingEnabled | true |
| stableBorrowRateEnabled | false |
| isBorrowableInIsolation | false |
| interestRateStrategy | 0x9b34E3e183c9b0d1a08fF57a8fb59c821616295f |
"
`;
